# kana_v2

./: .env.example  .gitignore  CLAUDE.md  README.md  REBUILD_PLAN.md  pyproject.toml
characters/kana/: backstory.md  character.yaml  core.md  never.md  speech.md  tastes.md
characters/kana/notes/: thesis.md
kana/: __init__.py  config.py  main.py  util.py
kana/adapters/: base.py  cli_adapter.py  discord_adapter.py
kana/domain/: character.py  conversation.py  memory.py  pacing.py  persona.py  relationship.py
kana/infra/: db.py  embeddings.py  llm.py  models.py  repository.py  schema.sql
tests/: test_adapters.py  test_character.py  test_config.py  test_llm_and_conversation.py  test_memory.py  test_models.py  test_pacing.py  test_relationship.py  test_repository.py
