[project]
name = "kana"
version = "2.0.0"
description = "加奈 v2 — Discord AI persona bot (local-model, retrieval memory)"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.3",
    "aiosqlite>=0.20",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "numpy>=1.26",
    "sqlite-vec>=0.1.6",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kana*"]
